<resources>
    <string name="app_name">Aspire Asparagus Lite</string>
    <string name="BrixHint">0</string>
    <string name="PlantStageLabel">Plant stage:</string>
    <string name="BrixReadingsLabel">Brix readings:</string>
    <string name="Plus">+</string>
    <string name="Minus">-</string>
    <string name="Reset">Reset</string>
    <string name="ResetAll">Reset all the entered Brix readings?</string>
    <string name="Help">Help</string>
    <string name="Feedback">Feedback</string>
    <string name="Legal">Legal</string>
    <string name="About">About</string>
    <string-array name="plant_stage_array">
        <item>Pre-harvest</item>
        <item>Harvest period</item>
        <item>Fern establishing</item>
        <item>Mid summer fern growth</item>
        <item>Late summer fern growth</item>
        <item>Dormancy</item>
    </string-array>
    <string name="BrixErrorNotANumber">"Invalid number '%1$s'!"</string>
    <string name="BrixErrorOutOfRange">"Invalid Brix reading (%1$s is not between %2$d and %3$d)!"</string>
    <string name="BrixErrorTooVariable">"Outlier detected (%1$s)!"</string>
    <string name="BrixErrorInsufficientValues">"Insufficient Brix readings entered (%1$d/%2$d)!"</string>
    <string name="BrixErrorOutOfRangeCHO">"Out of bounds CHO reading!"</string>
    <string name="BrixErrorUnknownStage">"Unknown plant stage '%1$s'!"</string>
    <string name="BrixErrorUnknownCategory">"Unknown age category '%1$s'!"</string>
    <string name="BrixCHO">"Estimated CHO: %1$.0f"</string>
    <string name="CommentUpdated">"Calculated results"</string>
    <string name="HelpBlurb">
        Topics:\n
        &#8226; Crop growth stage definitions\n
        &#8226; Measuring root carbohydrate (CHO)\n
        &#8226; App and model limitations\n
    </string>
    <string name="PlantStage">Crop growth stage</string>
    <string name="HelpPlantStageBlurb">
        It is important to select the correct growth stage as each has a unique set of recommendations depending on the root CHO values measured.\n\n

        <b>Pre-harvest:</b>\n
        During late winter, before spear growth starts.\n

        <b>Harvest period:</b>\n
        Any time during spear harvest.\n

        <b>Fern establishing:</b>\n
        During the period after the end of harvest when the fern canopy is establishing.\n

        <b>Mid summer fern growth:</b>\n
        During the period of maximum fern activity, after it is fully established.\n

        <b>Late summer fern growth:</b>\n
        During the period when fern activity is starting to decline.\n

        <b>Dormancy:</b>\n
        At the end of fall, when ferns have died.
    </string>
    <string name="BrixReadings">Measuring Root CHO</string>
    <string name="HelpBrixReadingsBlurb">
        Please click on the links below for instructions which describe how to
        obtain and process the root samples:\n\n
        &#8226;
        <a href="https://github.com/PlantandFoodResearch/aspire-lite/blob/master/brix-instructions-images.pdf?raw=true">
            brix-instructions-images.pdf
        </a>\n\n
        &#8226;
        <a href="https://github.com/PlantandFoodResearch/aspire-lite/blob/master/brix-instructions.pdf?raw=true">
            brix-instructions.pdf
        </a>
    </string>
    <string name="Limitations">Limitations</string>
    <string name="HelpLimitationsBlurb">
        The model contains a generic algorithm based on the average of typical
        annual CHO gain and loss patterns from 3 countries: North America,
        Germany and New Zealand.
        The generated information will not be valid
        for:\n
        &#8226; Crops with no dormancy period\n
        &#8226; Crops less than 3 years old\n\n
        See
        <a href="https://www.researchgate.net/profile/Sarah_Sinton/publication/253703294_Carbohydrates_and_Yield_Physiology_of_Asparagus_-_A_Global_Overview/links/5406201d0cf2bba34c1e3ed6.pdf">
            the summary paper
        </a> for more information.
    </string>
    <string name="FeedbackBlurb">
        If you want to submit feedback, feel free to
        <a href="https://github.com/PlantandFoodResearch/aspire-lite/issues/new">raise an issue</a>
        on <a href="https://github.com/PlantandFoodResearch/aspire-lite">Github</a>.
    </string>
    <string name="LegalBlurb">
        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.\n\n

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.\n\n

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see
        <a href="http://www.gnu.org/licenses/">http://www.gnu.org/licenses/</a>.
    </string>
    <string name="AboutBlurb">
        &lt;i>%1$s %2$s&lt;/i>
        &lt;br />&lt;br />

        See
        &lt;a href="https://www.researchgate.net/profile/Sarah_Sinton/publication/253703294_Carbohydrates_and_Yield_Physiology_of_Asparagus_-_A_Global_Overview/links/5406201d0cf2bba34c1e3ed6.pdf">
            the summary paper
        &lt;/a> for details on the science behind the app.
        The comments and recommendations for each growth stage and CHO value range were developed by government research scientists in New Zealand, USA and Germany using public-good funding.
        
        &lt;br />&lt;br />

        The app is open source, and is hosted on
        &lt;a href="https://github.com/PlantandFoodResearch/aspire-lite">Github&lt;/a>.
    </string>
    <string name="comment_d1_0">
        "This CHO value is within the range 0-150 mg/g. Root CHO content is very low for this stage of the annual growth cycle, probably due to inadequate replenishment of root reserves during the previous fern growth season.  This could have resulted from poor fern establishment, additional flushes during fern growth or premature fern loss or needle drop. These may have been caused by too much water, a foliar disease such as Stemphylium or physical damage such as that caused by wind or hail.  If a spear harvest is attempted, yield will probably be very low and subsequent fern growth will be poor.  No spear harvest will allow a long fern growth period and, therefore, plenty of opportunity for root recovery for the following season. Fern establishment will probably lack vigour and need boosting with intensive management such as irrigation (if conditions are dry) or extra fertiliser. Watch out for any problems that could stimulate new flushes of fern growth (such as too much water) or that could cause fern loss or needle drop (e.g. Stemphylium). New fern growth would use current CHO reserves and fern loss would slow or stop CHO production. Maintain good, but not excessive, fern growth. A large amount of fern is not needed to fully recharge root CHO content."
    </string>
    <string name="comment_d1_150">
        "This CHO value is within the range 150-250 mg/g. Root CHO content is low for this stage of the annual growth cycle, probably due to inadequate replenishment of root reserves during the previous fern growth season.  This could have resulted from poor fern establishment, additional flushes during fern growth or premature fern loss or needle drop.  These may have been caused by too much water, a foliar disease such as Stemphylium or physical damage such as that caused by wind or hail.  Spear yield will probably be low.  A short harvest would allow a longer fern growth period and, therefore, more opportunity for root recovery after close-up. Either do not harvest at all or reduce to 50% of normal duration. After harvest, manage fern growth throughout the season. Fern establishment may lack vigour and need boosting with intensive management such as irrigation (if conditions are dry) or extra fertiliser. Watch out for any problems that could stimulate new flushes of fern growth (such as too much water) or that could cause fern loss or needle drop (e.g. Stemphylium). New fern growth would use current CHO reserves and fern loss would slow or stop CHO production. Maintain good, but not excessive, fern growth. A large amount of fern is not needed to fully recharge root CHO content."
    </string>
    <string name="comment_d1_250">
        "This CHO value is within the range 250-350 mg/g. Root CHO content is below normal for this stage of the annual growth cycle, probably due to inadequate replenishment of root reserves during the previous fern growth season. This could have resulted from poor fern establishment, additional flushes during fern growth or premature fern loss or needle drop. These may have been caused by too much water, a foliar disease such as Stemphylium or physical damage such as that caused by wind or hail.  Spear yield will probably be lower than normal. Expect to reduce harvest period to 50-70% of normal duration. After harvest, manage fern growth throughout the season. Fern establishment may lack vigour and need boosting with intensive management such as irrigation (if conditions are dry) or extra fertiliser. Watch out for any problems that could stimulate new flushes of fern growth (such as too much water) or that could cause fern loss or needle drop (e.g. Stemphylium). New fern growth would use current CHO reserves and fern loss would slow or stop CHO production. Maintain good, but not excessive, fern growth. A large amount of fern is not needed to fully recharge root CHO content."
    </string>
    <string name="comment_d1_350">
        "This CHO value is within the range 350-450 mg/g. Root CHO content is good but not as high as it could be at this stage of the annual growth cycle,  probably due to incomplete replenishment of root reserves during the previous fern growth season.  This could have resulted from additional flushes during fern growth or premature fern loss or needle drop.  These may have been caused by too much water, a foliar disease such as Stemphylium or physical damage such as that caused by wind or hail.  As a result, spear yield could be reduced below optimum, especially if weather conditions are unfavourable for spear growth during harvest. A shorter harvest than usual would allow a longer fern growth period and, therefore, more opportunity for root recovery after close-up. Expect to reduce harvest period to 70% of normal duration, especially if closer to the 350 mg/g content. After harvest, manage fern growth throughout the season. Watch out for any problems that could stimulate new flushes of fern growth (such as too much water) or that could cause fern loss or needle drop (e.g. Stemphylium). New fern growth would use current CHO reserves and fern loss would slow or stop CHO production. Maintain good, but not excessive, fern growth. A large amount of fern is not needed to fully recharge root CHO content."
    </string>
</resources>