<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.plantandfood.aspirelite.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/PlantStageLayout">

            <Spinner
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:id="@+id/PlantStageSpinner"
                android:spinnerMode="dialog"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/PlantStageLabel"
                android:layout_toEndOf="@+id/PlantStageLabel"
                android:layout_centerVertical="true"
                android:padding="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearance"
                android:text="@string/PlantStageLabel"
                android:id="@+id/PlantStageLabel"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/BrixReadingsLayout">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearance"
                    android:text="@string/BrixReadingsLabel"
                    android:id="@+id/BrixReadingsLabel"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/BrixPlus"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/BrixReadingsLabel"
                    android:layout_toStartOf="@+id/BrixMinus"
                    android:layout_toLeftOf="@+id/BrixMinus"
                    android:contentDescription="@string/Plus"
                    android:src="@android:drawable/ic_input_add"
                    android:onClick="addEntry" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/BrixMinus"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:contentDescription="@string/Minus"
                    android:src="@android:drawable/ic_delete"
                    android:onClick="rmEntry" />

            </RelativeLayout>

        <GridView
            android:layout_width="match_parent"
            android:layout_height="214dp"
            android:orientation="horizontal"
            android:id="@+id/BrixEntryLayout"
            android:useDefaultMargins="false"
            android:gravity="center"
            android:stretchMode="columnWidth"
            android:columnWidth="60dp"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:numColumns="auto_fit"
            android:layout_weight="0.7">
        </GridView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/MessageList">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
